# crypto-invest-portfolio

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  modules.md  streamlit_gui_guide.md
scripts/: myscript.py  myscript.sh  run_gui.py  tbump.sh
src/crypto_invest_portfolio/: CLI_portfolio_app.py  main.py
src/crypto_invest_portfolio/analysis/: __init__.py  operations.py
src/crypto_invest_portfolio/constants/: __init__.py  config.py  enums.py
src/crypto_invest_portfolio/database/: __init__.py  init.py
src/crypto_invest_portfolio/i18n/: __init__.py  en.py  fr.py  manager.py
src/crypto_invest_portfolio/portfolio/: __init__.py  operations.py
src/crypto_invest_portfolio/streamlit_gui/: __init__.py  app.py  launch.py  main.py
src/crypto_invest_portfolio/streamlit_gui/pages/: __init__.py  analysis.py  portfolio_operations.py  settings.py  visualization.py
src/crypto_invest_portfolio/ui/: __init__.py  input_helpers.py
tests/: test_cli_portfolio_app.py  test_foo.py  test_refactored_modules.py
