[tool.poetry]
authors = ["Adrien Pajon <adrien.pajon@gmail.com>"]
description = "This is a repository python project of a crypto investment portfolio."
keywords = ["python"]
name = "crypto-invest-portfolio"
packages = [{include = "crypto_invest_portfolio", from = "src"}]
readme = "README.md"
version = "0.0.3"

[tool.poetry.urls]
Documentation = "https://apajon.github.io/crypto-invest-portfolio/"
Homepage = "https://apajon.github.io/crypto-invest-portfolio/"
Repository = "https://github.com/apajon/crypto-invest-portfolio"

[tool.poetry.dependencies]
matplotlib = "^3.10.5"
pandas = "^2.3.1"
python = "^3.12"
requests = "^2.32.5"
streamlit = "^1.42.0"

[tool.poetry.scripts]
crypto-portfolio = "crypto_invest_portfolio.CLI_portfolio_app:main_menu"
crypto-portfolio-gui = "crypto_invest_portfolio.streamlit_gui.main:main"

[tool.poetry.group.dev.dependencies]
black = ">=23.0.0"
deptry = ">=0.23.0"
mkdocs = ">=1.4.2"
mkdocs-material = ">=8.5.10"
mkdocstrings = {extras = ["python"], version = ">=0.26.1"}
mypy = ">=0.991"
pre-commit = ">=2.20.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
ruff = ">=0.11.5"
tbump = ">=6.9.0"

[tool.poetry.group.stubs.dependencies]
microsoft-python-type-stubs = {git = "https://github.com/microsoft/python-type-stubs.git"}
pandas-stubs = "^2.2.3.250308"
pytest-stub = "^1.1.0"
types-requests = "^2.32.4.20250809"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = false
disallow_untyped_defs = false
files = ["src"]
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ["py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
  # LineTooLong
  "E501", # DoNotAssignLambda
  "E731",
]
select = [
  # flake8-2020
  "YTT", # flake8-bandit
  "S", # flake8-bugbear
  "B", # flake8-builtins
  "A", # flake8-comprehensions
  "C4", # flake8-debugger
  "T10", # flake8-simplify
  "SIM", # isort
  "I", # mccabe
  "C90", # pycodestyle
  "E",
  "W", # pyflakes
  "F", # pygrep-hooks
  "PGH", # pyupgrade
  "UP", # ruff
  "RUF", # tryceratops
  "TRY",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.tbump]
# tbump configuration for automated version bumping
github_url = "https://github.com/apajon/crypto-invest-portfolio"

[tool.tbump.version]
current = "0.0.3"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[[tool.tbump.file]]
search = 'version = "{current_version}"'
src = "pyproject.toml"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.after_push]]
cmd = "git push --follow-tags"
name = "push-follow-tags"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
